--- a/DibnerLibraryApp/Base.lproj/Main.storyboard
+++ b/DibnerLibraryApp/Base.lproj/Main.storyboard
@@ -371,6 +371,9 @@
                                 <state key="normal" title="Log Out">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="onLogOutPressed:" destination="T80-mw-wrX" eventType="touchUpInside" id="BaL-qP-N9n"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.50259374999999995" green="0.50259374999999995" blue="0.50259374999999995" alpha="1" colorSpace="calibratedRGB"/>
